deploy/k8s/auto-school-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: auto-school
  namespace: auto-school
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - outbound
  routes:
    - kind: Rule
      match: Host(`school.vanderloch.com`) && PathPrefix(`/outpost.goauthentik.io/`)
      services:
        - name: authentik-outpost
          port: 80
          scheme: http
    - kind: Rule
      match: Host(`school.vanderloch.com`)
      middlewares:
        - name: authentik-forwardauth
      services:
        - name: auto-school
          port: 80
          scheme: http
  tls:
    secretName: lochis-tls
